--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         let selectedType = "";
 
         // 設定場景：請確保您的影片檔案放置在 videos 資料夾中，且檔名正確（區分大小寫）
-        const scenarios = [
-            { type: "實體面試", title: "【情境A：實體面試模式】", url: "videos/實體面試.mp4" },
-            { type: "線上面試", title: "【情境B：線上面試模式】", url: "videos/線上面試.mp4" },
-            { type: "AI面試",   title: "【情境C：AI面試模式】",  url: "videos/AI面試.mp4" }
-        ];
+       const scenarios = [
+    { type: "實體面試", title: "【情境 A：實體面試模式】", url: "./videos/實體面試.mp4" },
+    { type: "線上面試", title: "【情境 B：線上面試模式】", url: "./videos/線上面試.mp4" },
+    { type: "AI面試",   title: "【情境 C：AI面試模式】",  url: "./videos/AI面試.mp4" }
+];
 
         function assignInterview() {
             // 隨機選取一個情境
@@ -90,3 +90,4 @@
     </script>
 </body>
 </html>
+
