--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
      const scenarios = [
             { type: "實體面試", title: "【情境 A：實體面試模式】", url: "videos/physical.mp4" },
             { type: "線上面試", title: "【情境 B：線上面試模式】", url: "videos/online.mp4" },
-            { type: "AI面試",   title: "【情境 C：AI面試模式】",  url: "videos/ai.mp4" }
+            { type: "AI面試",   title: "【情境 C：AI面試模式】",  url: "videos/ai.mp4.mp4" }
         ];
 
         function assignInterview() {
@@ -90,5 +90,6 @@
     </script>
 </body>
 </html>
+
 
 
